<resources>
    <string name="app_name">小学教育题库</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="please_input_phone_number">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_button">登 录</string>
    <string name="forget_password">忘记密码?</string>

    <string name="please_input_check_code">请输入验证码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="phone_number">手机号</string>
    <string name="check_code">验证码</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>

    <string name="self_test_name">自测名称</string>
    <string name="knowledge_point">知识点</string>
    <string name="number">数量</string>
    <string name="number_20">20</string>
    <string name="ge">个</string>
    <string name="create_test">开始组题</string>


    <string name="my_homework">我的作业</string>
    <string name="my_test">我的自测</string>
    <string name="my_analysis">我的分析</string>
    <string name="my_error">我的错题</string>
    <string name="my_collection">我的收藏</string>


    <string name="child_homework">孩子作业</string>
    <string name="child_test">孩子自测</string>
    <string name="child_analysis">孩子分析</string>


    <string name="post_homework">发布作业</string>
    <string name="check_homework">批阅作业</string>
    <string name="grade_analysis">成绩分析</string>

    <string name="empty"></string>


    <string name="empty_message">没有要显示的内容</string>
    <string name="loading_message">请稍后</string>
    <string name="error_message">网络异常</string>

    <string name="empty_button">请重试</string>
    <string name="loading_button">取消</string>
    <string name="error_button">再试一次</string>

    <string name="collection">收藏</string>
    <string name="time">00:00</string>
    <string name="change_question">换一道题</string>

    <string name="open">展开</string>
    <string name="close">收起</string>
    <string name="detail">详情</string>
    <string name="teacher_evaluation">老师评价</string>

    <string name="my_grade">我的成绩</string>
    <string name="class_rank">班级排名</string>
    <string name="error_point">出错知识点</string>
    <string name="select_your_role">选择您的角色</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="parent">家长</string>
    <string name="selected_student">已选择学生</string>
    <string name="exit">保存并离开</string>
    <string name="you_have_not_finished">您还未完成,是否保存并离开</string>
    <string name="save_and_exit">保存并离开</string>
    <string name="continue_do_homework">我要继续做题</string>
    <string name="my_answer">我的答案:</string>
    <string name="stand_answer">正确答案:</string>
    <string name="point">考点:</string>
    <string name="question_analytical">解题步骤:</string>
    <string name="look_answer">查看答案</string>
    <string name="colon">：</string>
    <string name="finished">已完成</string>
    <string name="not_finished">未完成</string>
    <string name="can_not_see_not_finished_homework">未完成的作业不能查看</string>
    <string name="something_error">something error</string>
    <string name="function_not_finished">该功能未实现</string>
    <string name="register">注册</string>
    <string name="answer_card">答题卡</string>
    <string name="question_analysical">题目解析</string>
    <string name="history">历史</string>
    <string name="are_you_sure_to_exit">你确定要保存进度并离开么</string>
    <string name="assigment">交卷</string>
    <string name="are_you_sure_to_assigment">你确定要交卷么</string>
    <string name="i_want_assigment">我要交卷</string>
    <string name="i_do_not_want_assigment">我再检查检查</string>
    <string name="pause">暂停</string>
    <string name="pause_time">计时暂停</string>
    <string name="start_time">开始计时</string>
    <string name="you_have_not_finish_are_you_sure_to_assigment">你还有题目未完成，确定要交卷么</string>
    <string name="to_finish_other_question">去做未完成的题目</string>
    <string name="reply">回复</string>
    <string name="report_card">作业解析</string>
    <string name="test_history">自测历史</string>
    <string name="select_student">选择学生</string>
    <string name="search">搜索</string>
    <string name="all_select">全选</string>
    <string name="delete">删除</string>
    <string name="student_list">学生列表</string>
    <string name="sure">确定</string>
    <string name="please_login">请登录</string>
    <string name="login_for_more_function">登录可以获得更多功能</string>
    <string name="cancel">取消</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="select_random">随机选择</string>
    <string name="select_error">根据错题选择</string>
    <string name="select_point">选择特定的知识点</string>

    <string name="state_finished">已完成</string>
    <string name="state_unfinished">未完成</string>
    <string name="state_not_post">未发布</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="age">年龄</string>
    <string name="contact">联系方式</string>
    <string name="address">家庭住址</string>
    <string name="clazz">班级</string>
    <string name="school">学校</string>
    <string name="change_role">切换角色</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="self_set">设置</string>
    <string name="change_theme">主题</string>
    <string name="evaluation_situation">评改情况</string>
    <string name="topic_detail">题目详情</string>
    <string name="please_select_point">请选择知识点</string>
    <string name="add">新建</string>
    <string name="press_again_exit">再按一次退出应用</string>
    <string name="please_input_question_number">请输入题目数量</string>
    <string name="question_name_cannot_be_empty">题目不能为空</string>
    <string name="test">自测</string>
    <string name="data_format">MM月dd日</string>
    <string name="string_point">point</string>
    <string name="string_state">state</string>
    <string name="comma">,</string>
    <string name="string_data">data</string>
    <string name="string_title">title</string>
    <string name="string_target">target</string>
    <string name="string_question">question</string>
    <string name="register_login">注册/登录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="child">孩子</string>
    <string name="subject">教材</string>
    <string name="course">科目</string>
    <string name="edit">编辑</string>
    <string name="person_info">个人信息</string>
    <string name="homework">作业</string>
</resources>
