<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_white"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_space__16">

        <LinearLayout
            android:id="@+id/ll_main_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/touch_view_64"
                android:layout_height="@dimen/touch_view_64"
                android:src="@mipmap/icon_test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_test"
                android:textColor="?attr/font_black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_homework"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/touch_view_64"
                android:layout_height="@dimen/touch_view_64"
                android:scaleType="fitCenter"
                android:src="@mipmap/icon_homework" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_homework"
                android:textColor="?attr/font_black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/touch_view_64"
                android:layout_height="@dimen/touch_view_64"
                android:scaleType="fitCenter"
                android:src="@mipmap/icon_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_error"
                android:textColor="?attr/font_black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_space__16">

        <LinearLayout
            android:id="@+id/ll_main_collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/touch_view_64"
                android:layout_height="@dimen/touch_view_64"
                android:scaleType="fitCenter"
                android:src="@mipmap/icon_collection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collection"
                android:textColor="?attr/font_black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_analysis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/touch_view_64"
                android:layout_height="@dimen/touch_view_64"
                android:scaleType="fitCenter"
                android:src="@mipmap/icon_analysis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_analysis"
                android:textColor="?attr/font_black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>
</LinearLayout>