<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/background_white">
    <include layout="@layout/layout_toolbar"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_your_role"
            android:textColor="?attr/font_black"
            android:textSize="@dimen/font_size_normal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_space_48"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_select_student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_space_32"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/touch_view_96"
                    android:layout_height="@dimen/touch_view_96"
                    android:src="@mipmap/role_student" />

                <TextView
                    android:layout_marginTop="@dimen/view_space_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"
                    android:textColor="?attr/font_black"
                    android:textSize="@dimen/font_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_select_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_space_32"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/touch_view_96"
                    android:layout_height="@dimen/touch_view_96"
                    android:src="@mipmap/role_teacher" />

                <TextView
                    android:layout_marginTop="@dimen/view_space_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher"
                    android:textColor="?attr/font_black"
                    android:textSize="@dimen/font_size_normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_select_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/touch_view_96"
                    android:layout_height="@dimen/touch_view_96"
                    android:src="@mipmap/role_parent" />

                <TextView
                    android:layout_marginTop="@dimen/view_space_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parent"
                    android:textColor="?attr/font_black"
                    android:textSize="@dimen/font_size_normal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>