<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_white"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_space__16">

        <LinearLayout
            android:id="@+id/ll_teacher_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/touch_view_64"
                android:layout_height="@dimen/touch_view_64"
                android:src="@mipmap/icon_post" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_homework"
                android:textColor="?attr/font_black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_teacher_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/touch_view_64"
                android:layout_height="@dimen/touch_view_64"
                android:src="@mipmap/icon_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_homework"
                android:textColor="?attr/font_black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_teacher_analysis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/touch_view_64"
                android:layout_height="@dimen/touch_view_64"
                android:src="@mipmap/icon_analysis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_analysis"
                android:textColor="?attr/font_black"
                android:textSize="@dimen/font_size_normal" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>